// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcRadioBtn > attrs > should render with custom attributes 1`] = `
<div
  class="ec-radio-btn my-class"
  data-test="my-data-test ec-radio-btn"
  id="test-id"
>
  <input
    aria-describedby="ec-radio-btn-1-error ec-radio-btn-1-label ec-radio-btn-1-description"
    class="ec-radio-btn__input"
    data-test="ec-radio-btn__input"
    id="ec-radio-btn-1"
    type="radio"
  />
  <div
    class="ec-radio-btn__wrapper"
  >
    <div
      class="ec-radio-btn__icon-wrapper"
      data-test="ec-radio-btn__icon-wrapper"
    >
      <div
        class="ec-radio-btn__icon-wrapper-inner"
      >
        <svg
          class="ec-icon ec-radio-btn__icon"
          height="20"
          width="20"
        >
          <use
            xlink:href="#ec-rounded-notification"
          />
        </svg>
      </div>
    </div>
    <div
      class="ec-radio-btn__text-wrapper"
      data-test="ec-radio-btn__text-wrapper"
    >
      <label
        class="ec-radio-btn__label"
        data-test="ec-radio-btn__label"
        for="ec-radio-btn-1"
        id="ec-radio-btn-1-label"
      >
        
        Yes
        
      </label>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcRadioBtn > focus > should be checked and focused 1`] = `
<body>
  <div>
    <div
      data-v-app=""
    />
  </div>
  <div>
    <div
      data-v-app=""
    >
      <div
        class="ec-radio-btn"
        data-test="ec-radio-btn"
      >
        <input
          aria-describedby="ec-radio-btn-1-error ec-radio-btn-1-label ec-radio-btn-1-description"
          class="ec-radio-btn__input"
          data-test="ec-radio-btn__input"
          id="ec-radio-btn-1"
          type="radio"
          value="y"
        />
        <div
          class="ec-radio-btn__wrapper"
        >
          <div
            class="ec-radio-btn__icon-wrapper ec-radio-btn__icon-wrapper--checked-and-focused"
            data-test="ec-radio-btn__icon-wrapper"
          >
            <div
              class="ec-radio-btn__icon-wrapper-inner"
            >
              <svg
                class="ec-icon ec-radio-btn__icon ec-radio-btn__icon--checked"
                height="20"
                width="20"
              >
                <use
                  xlink:href="#ec-rounded-notification"
                />
              </svg>
            </div>
          </div>
          <div
            class="ec-radio-btn__text-wrapper"
            data-test="ec-radio-btn__text-wrapper"
          >
            <label
              class="ec-radio-btn__label"
              data-test="ec-radio-btn__label"
              for="ec-radio-btn-1"
              id="ec-radio-btn-1-label"
            >
              
              Yes
              
            </label>
            <!--v-if-->
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
</body>
`;

exports[`EcRadioBtn > focus > should be checked and focused 2`] = `
<div
  class="ec-radio-btn__icon-wrapper ec-radio-btn__icon-wrapper--checked-and-focused"
  data-test="ec-radio-btn__icon-wrapper"
>
  <div
    class="ec-radio-btn__icon-wrapper-inner"
  >
    <svg
      class="ec-icon ec-radio-btn__icon ec-radio-btn__icon--checked"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-rounded-notification"
      />
    </svg>
  </div>
</div>
`;

exports[`EcRadioBtn > focus > should be focused 1`] = `
<body>
  <div>
    <div
      data-v-app=""
    >
      <div
        class="ec-radio-btn"
        data-test="ec-radio-btn"
      >
        <input
          aria-describedby="ec-radio-btn-1-error ec-radio-btn-1-label ec-radio-btn-1-description"
          class="ec-radio-btn__input"
          data-test="ec-radio-btn__input"
          id="ec-radio-btn-1"
          type="radio"
        />
        <div
          class="ec-radio-btn__wrapper"
        >
          <div
            class="ec-radio-btn__icon-wrapper ec-radio-btn__icon-wrapper--focused"
            data-test="ec-radio-btn__icon-wrapper"
          >
            <div
              class="ec-radio-btn__icon-wrapper-inner"
            >
              <svg
                class="ec-icon ec-radio-btn__icon"
                height="20"
                width="20"
              >
                <use
                  xlink:href="#ec-rounded-notification"
                />
              </svg>
            </div>
          </div>
          <div
            class="ec-radio-btn__text-wrapper"
            data-test="ec-radio-btn__text-wrapper"
          >
            <label
              class="ec-radio-btn__label"
              data-test="ec-radio-btn__label"
              for="ec-radio-btn-1"
              id="ec-radio-btn-1-label"
            >
              
              Yes
              
            </label>
            <!--v-if-->
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
</body>
`;

exports[`EcRadioBtn > focus > should be focused 2`] = `
<div
  class="ec-radio-btn__icon-wrapper ec-radio-btn__icon-wrapper--focused"
  data-test="ec-radio-btn__icon-wrapper"
>
  <div
    class="ec-radio-btn__icon-wrapper-inner"
  >
    <svg
      class="ec-icon ec-radio-btn__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-rounded-notification"
      />
    </svg>
  </div>
</div>
`;

exports[`EcRadioBtn > focus > should be not focused 1`] = `
<body>
  <div>
    <div
      data-v-app=""
    />
  </div>
  <div>
    <div
      data-v-app=""
    />
  </div>
  <div>
    <div
      data-v-app=""
    >
      <div
        class="ec-radio-btn"
        data-test="ec-radio-btn"
      >
        <input
          aria-describedby="ec-radio-btn-1-error ec-radio-btn-1-label ec-radio-btn-1-description"
          class="ec-radio-btn__input"
          data-test="ec-radio-btn__input"
          id="ec-radio-btn-1"
          type="radio"
        />
        <div
          class="ec-radio-btn__wrapper"
        >
          <div
            class="ec-radio-btn__icon-wrapper"
            data-test="ec-radio-btn__icon-wrapper"
          >
            <div
              class="ec-radio-btn__icon-wrapper-inner"
            >
              <svg
                class="ec-icon ec-radio-btn__icon"
                height="20"
                width="20"
              >
                <use
                  xlink:href="#ec-rounded-notification"
                />
              </svg>
            </div>
          </div>
          <div
            class="ec-radio-btn__text-wrapper"
            data-test="ec-radio-btn__text-wrapper"
          >
            <label
              class="ec-radio-btn__label"
              data-test="ec-radio-btn__label"
              for="ec-radio-btn-1"
              id="ec-radio-btn-1-label"
            >
              
              Yes
              
            </label>
            <!--v-if-->
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
</body>
`;

exports[`EcRadioBtn > focus > should be not focused 2`] = `
<div
  class="ec-radio-btn__icon-wrapper"
  data-test="ec-radio-btn__icon-wrapper"
>
  <div
    class="ec-radio-btn__icon-wrapper-inner"
  >
    <svg
      class="ec-icon ec-radio-btn__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-rounded-notification"
      />
    </svg>
  </div>
</div>
`;

exports[`EcRadioBtn > focus > when clicking on radio option > should be checked and focused 1`] = `
<div
  class="ec-radio-btn__icon-wrapper ec-radio-btn__icon-wrapper--focused"
  data-test="ec-radio-btn__icon-wrapper"
>
  <div
    class="ec-radio-btn__icon-wrapper-inner"
  >
    <svg
      class="ec-icon ec-radio-btn__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-rounded-notification"
      />
    </svg>
  </div>
</div>
`;

exports[`EcRadioBtn > props > error > should render the radio button with a error style on icon 1`] = `
<div
  class="ec-radio-btn__icon-wrapper ec-radio-btn__icon-wrapper--error"
  data-test="ec-radio-btn__icon-wrapper"
>
  <div
    class="ec-radio-btn__icon-wrapper-inner"
  >
    <svg
      class="ec-icon ec-radio-btn__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-rounded-notification"
      />
    </svg>
  </div>
</div>
`;

exports[`EcRadioBtn > props > error > should render the radio button with a given error message 1`] = `
<div
  class="ec-radio-btn__error-text"
  data-test="ec-radio-btn__error-text"
  id="ec-radio-btn-1-error"
>
  
  Test error message prop
  
</div>
`;

exports[`EcRadioBtn > props > isDisabled > should render the checked radio button with a disabled attribute 1`] = `
<input
  aria-describedby="ec-radio-btn-1-error ec-radio-btn-1-label ec-radio-btn-1-description"
  class="ec-radio-btn__input"
  data-test="ec-radio-btn__input"
  disabled=""
  id="ec-radio-btn-1"
  type="radio"
  value="y"
/>
`;

exports[`EcRadioBtn > props > isDisabled > should render the checked radio button with a disabled icon 1`] = `
<div
  class="ec-radio-btn__icon-wrapper ec-radio-btn__icon-wrapper--checked-and-disabled"
  data-test="ec-radio-btn__icon-wrapper"
>
  <div
    class="ec-radio-btn__icon-wrapper-inner"
  >
    <svg
      class="ec-icon ec-radio-btn__icon ec-radio-btn__icon--checked-and-disabled"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-rounded-notification"
      />
    </svg>
  </div>
</div>
`;

exports[`EcRadioBtn > props > isDisabled > should render the unchecked radio button with a disabled attribute 1`] = `
<input
  aria-describedby="ec-radio-btn-1-error ec-radio-btn-1-label ec-radio-btn-1-description"
  class="ec-radio-btn__input"
  data-test="ec-radio-btn__input"
  disabled=""
  id="ec-radio-btn-1"
  type="radio"
/>
`;

exports[`EcRadioBtn > props > isDisabled > should render the unchecked radio button with a disabled icon 1`] = `
<div
  class="ec-radio-btn__icon-wrapper ec-radio-btn__icon-wrapper--disabled"
  data-test="ec-radio-btn__icon-wrapper"
>
  <div
    class="ec-radio-btn__icon-wrapper-inner"
  >
    <svg
      class="ec-icon ec-radio-btn__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-rounded-notification"
      />
    </svg>
  </div>
</div>
`;

exports[`EcRadioBtn > props > isTextInline > should render the radio buttons text (label and description) on a single line 1`] = `
<div
  class="ec-radio-btn__text-wrapper ec-radio-btn__text-wrapper--is-single-line"
  data-test="ec-radio-btn__text-wrapper"
>
  <label
    class="ec-radio-btn__label"
    data-test="ec-radio-btn__label"
    for="ec-radio-btn-1"
    id="ec-radio-btn-1-label"
    title="Yes"
  >
    
    Yes
    
  </label>
  <p
    class="ec-radio-btn__description ec-radio-btn__description--is-single-line"
    data-test="ec-radio-btn__description"
    id="ec-radio-btn-1-description"
    title="My description"
  >
    
    My description
    
  </p>
</div>
`;

exports[`EcRadioBtn > props > isTextInline > should render the radio buttons text on a single line 1`] = `
<div
  class="ec-radio-btn__text-wrapper ec-radio-btn__text-wrapper--is-single-line"
  data-test="ec-radio-btn__text-wrapper"
>
  <label
    class="ec-radio-btn__label"
    data-test="ec-radio-btn__label"
    for="ec-radio-btn-1"
    id="ec-radio-btn-1-label"
    title="Yes"
  >
    
    Yes
    
  </label>
  <!--v-if-->
</div>
`;

exports[`EcRadioBtn > props > label > should render the radio button with the given label 1`] = `
<div
  class="ec-radio-btn"
  data-test="ec-radio-btn"
>
  <input
    aria-describedby="ec-radio-btn-1-error ec-radio-btn-1-label ec-radio-btn-1-description"
    class="ec-radio-btn__input"
    data-test="ec-radio-btn__input"
    id="ec-radio-btn-1"
    type="radio"
  />
  <div
    class="ec-radio-btn__wrapper"
  >
    <div
      class="ec-radio-btn__icon-wrapper"
      data-test="ec-radio-btn__icon-wrapper"
    >
      <div
        class="ec-radio-btn__icon-wrapper-inner"
      >
        <svg
          class="ec-icon ec-radio-btn__icon"
          height="20"
          width="20"
        >
          <use
            xlink:href="#ec-rounded-notification"
          />
        </svg>
      </div>
    </div>
    <div
      class="ec-radio-btn__text-wrapper"
      data-test="ec-radio-btn__text-wrapper"
    >
      <label
        class="ec-radio-btn__label"
        data-test="ec-radio-btn__label"
        for="ec-radio-btn-1"
        id="ec-radio-btn-1-label"
      >
        
        Yes
        
      </label>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcRadioBtn > props > label > should render the radio button without label when not present 1`] = `
<div
  class="ec-radio-btn"
  data-test="ec-radio-btn"
>
  <input
    aria-describedby="ec-radio-btn-1-error ec-radio-btn-1-label ec-radio-btn-1-description"
    class="ec-radio-btn__input"
    data-test="ec-radio-btn__input"
    id="ec-radio-btn-1"
    type="radio"
  />
  <div
    class="ec-radio-btn__wrapper"
  >
    <div
      class="ec-radio-btn__icon-wrapper"
      data-test="ec-radio-btn__icon-wrapper"
    >
      <div
        class="ec-radio-btn__icon-wrapper-inner"
      >
        <svg
          class="ec-icon ec-radio-btn__icon"
          height="20"
          width="20"
        >
          <use
            xlink:href="#ec-rounded-notification"
          />
        </svg>
      </div>
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>
`;

exports[`EcRadioBtn > props > name > should have a "id" attribute on the input equal to the "for" attribute on the label 1`] = `
DOMWrapper {
  "isDisabled": [Function],
  "wrapperElement": <div
    class="ec-radio-btn"
    data-test="ec-radio-btn"
  >
    <input
      aria-describedby="ec-radio-btn-1-error ec-radio-btn-1-label ec-radio-btn-1-description"
      class="ec-radio-btn__input"
      data-test="ec-radio-btn__input"
      id="ec-radio-btn-1"
      type="radio"
    />
    <div
      class="ec-radio-btn__wrapper"
    >
      <div
        class="ec-radio-btn__icon-wrapper"
        data-test="ec-radio-btn__icon-wrapper"
      >
        <div
          class="ec-radio-btn__icon-wrapper-inner"
        >
          <svg
            class="ec-icon ec-radio-btn__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-rounded-notification"
            />
          </svg>
        </div>
      </div>
      <div
        class="ec-radio-btn__text-wrapper"
        data-test="ec-radio-btn__text-wrapper"
      >
        <label
          class="ec-radio-btn__label"
          data-test="ec-radio-btn__label"
          for="ec-radio-btn-1"
          id="ec-radio-btn-1-label"
        >
          
          Yes
          
        </label>
        <!--v-if-->
      </div>
    </div>
    <!--v-if-->
  </div>,
}
`;

exports[`EcRadioBtn > should render properly 1`] = `
<div
  class="ec-radio-btn"
  data-test="ec-radio-btn"
>
  <input
    aria-describedby="ec-radio-btn-1-error ec-radio-btn-1-label ec-radio-btn-1-description"
    class="ec-radio-btn__input"
    data-test="ec-radio-btn__input"
    id="ec-radio-btn-1"
    type="radio"
  />
  <div
    class="ec-radio-btn__wrapper"
  >
    <div
      class="ec-radio-btn__icon-wrapper"
      data-test="ec-radio-btn__icon-wrapper"
    >
      <div
        class="ec-radio-btn__icon-wrapper-inner"
      >
        <svg
          class="ec-icon ec-radio-btn__icon"
          height="20"
          width="20"
        >
          <use
            xlink:href="#ec-rounded-notification"
          />
        </svg>
      </div>
    </div>
    <div
      class="ec-radio-btn__text-wrapper"
      data-test="ec-radio-btn__text-wrapper"
    >
      <label
        class="ec-radio-btn__label"
        data-test="ec-radio-btn__label"
        for="ec-radio-btn-1"
        id="ec-radio-btn-1-label"
      >
        
        Yes
        
      </label>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcRadioBtn > slots > description > should render description slot instead of description prop when both are passed 1`] = `
<div
  class="ec-radio-btn"
  data-test="ec-radio-btn"
>
  <input
    aria-describedby="ec-radio-btn-1-error ec-radio-btn-1-label ec-radio-btn-1-description"
    class="ec-radio-btn__input"
    data-test="ec-radio-btn__input"
    id="ec-radio-btn-1"
    type="radio"
  />
  <div
    class="ec-radio-btn__wrapper"
  >
    <div
      class="ec-radio-btn__icon-wrapper"
      data-test="ec-radio-btn__icon-wrapper"
    >
      <div
        class="ec-radio-btn__icon-wrapper-inner"
      >
        <svg
          class="ec-icon ec-radio-btn__icon"
          height="20"
          width="20"
        >
          <use
            xlink:href="#ec-rounded-notification"
          />
        </svg>
      </div>
    </div>
    <div
      class="ec-radio-btn__text-wrapper"
      data-test="ec-radio-btn__text-wrapper"
    >
      <label
        class="ec-radio-btn__label"
        data-test="ec-radio-btn__label"
        for="ec-radio-btn-1"
        id="ec-radio-btn-1-label"
      >
        
        Yes
        
      </label>
      <p
        class="ec-radio-btn__description"
        data-test="ec-radio-btn__description"
        id="ec-radio-btn-1-description"
      >
        
        Description message coming from slot
        
      </p>
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcRadioBtn > slots > description > should render the description slot if passed 1`] = `
<div
  class="ec-radio-btn"
  data-test="ec-radio-btn"
>
  <input
    aria-describedby="ec-radio-btn-1-error ec-radio-btn-1-label ec-radio-btn-1-description"
    class="ec-radio-btn__input"
    data-test="ec-radio-btn__input"
    id="ec-radio-btn-1"
    type="radio"
  />
  <div
    class="ec-radio-btn__wrapper"
  >
    <div
      class="ec-radio-btn__icon-wrapper"
      data-test="ec-radio-btn__icon-wrapper"
    >
      <div
        class="ec-radio-btn__icon-wrapper-inner"
      >
        <svg
          class="ec-icon ec-radio-btn__icon"
          height="20"
          width="20"
        >
          <use
            xlink:href="#ec-rounded-notification"
          />
        </svg>
      </div>
    </div>
    <div
      class="ec-radio-btn__text-wrapper"
      data-test="ec-radio-btn__text-wrapper"
    >
      <label
        class="ec-radio-btn__label"
        data-test="ec-radio-btn__label"
        for="ec-radio-btn-1"
        id="ec-radio-btn-1-label"
      >
        
        Yes
        
      </label>
      <p
        class="ec-radio-btn__description"
        data-test="ec-radio-btn__description"
        id="ec-radio-btn-1-description"
      >
        
        Test description message slot
        
      </p>
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcRadioBtn > slots > errorMessage > should render error-message slot instead of error-message prop when both are passed 1`] = `
<div
  class="ec-radio-btn"
  data-test="ec-radio-btn"
>
  <input
    aria-describedby="ec-radio-btn-1-error ec-radio-btn-1-label ec-radio-btn-1-description"
    class="ec-radio-btn__input"
    data-test="ec-radio-btn__input"
    id="ec-radio-btn-1"
    type="radio"
  />
  <div
    class="ec-radio-btn__wrapper"
  >
    <div
      class="ec-radio-btn__icon-wrapper"
      data-test="ec-radio-btn__icon-wrapper"
    >
      <div
        class="ec-radio-btn__icon-wrapper-inner"
      >
        <svg
          class="ec-icon ec-radio-btn__icon"
          height="20"
          width="20"
        >
          <use
            xlink:href="#ec-rounded-notification"
          />
        </svg>
      </div>
    </div>
    <div
      class="ec-radio-btn__text-wrapper"
      data-test="ec-radio-btn__text-wrapper"
    >
      <label
        class="ec-radio-btn__label"
        data-test="ec-radio-btn__label"
        for="ec-radio-btn-1"
        id="ec-radio-btn-1-label"
      >
        
        Yes
        
      </label>
      <!--v-if-->
    </div>
  </div>
  <div
    class="ec-radio-btn__error-text"
    data-test="ec-radio-btn__error-text"
    id="ec-radio-btn-1-error"
  >
    
    Error message coming from slot
    
  </div>
</div>
`;

exports[`EcRadioBtn > slots > errorMessage > should render the error message slot if passed 1`] = `
<div
  class="ec-radio-btn"
  data-test="ec-radio-btn"
>
  <input
    aria-describedby="ec-radio-btn-1-error ec-radio-btn-1-label ec-radio-btn-1-description"
    class="ec-radio-btn__input"
    data-test="ec-radio-btn__input"
    id="ec-radio-btn-1"
    type="radio"
  />
  <div
    class="ec-radio-btn__wrapper"
  >
    <div
      class="ec-radio-btn__icon-wrapper"
      data-test="ec-radio-btn__icon-wrapper"
    >
      <div
        class="ec-radio-btn__icon-wrapper-inner"
      >
        <svg
          class="ec-icon ec-radio-btn__icon"
          height="20"
          width="20"
        >
          <use
            xlink:href="#ec-rounded-notification"
          />
        </svg>
      </div>
    </div>
    <div
      class="ec-radio-btn__text-wrapper"
      data-test="ec-radio-btn__text-wrapper"
    >
      <label
        class="ec-radio-btn__label"
        data-test="ec-radio-btn__label"
        for="ec-radio-btn-1"
        id="ec-radio-btn-1-label"
      >
        
        Yes
        
      </label>
      <!--v-if-->
    </div>
  </div>
  <div
    class="ec-radio-btn__error-text"
    data-test="ec-radio-btn__error-text"
    id="ec-radio-btn-1-error"
  >
    
    Test error message slot
    
  </div>
</div>
`;

exports[`EcRadioBtn > slots > label > should render label slot instead of label prop when both are passed 1`] = `
<div
  class="ec-radio-btn"
  data-test="ec-radio-btn"
>
  <input
    aria-describedby="ec-radio-btn-1-error ec-radio-btn-1-label ec-radio-btn-1-description"
    class="ec-radio-btn__input"
    data-test="ec-radio-btn__input"
    id="ec-radio-btn-1"
    type="radio"
  />
  <div
    class="ec-radio-btn__wrapper"
  >
    <div
      class="ec-radio-btn__icon-wrapper"
      data-test="ec-radio-btn__icon-wrapper"
    >
      <div
        class="ec-radio-btn__icon-wrapper-inner"
      >
        <svg
          class="ec-icon ec-radio-btn__icon"
          height="20"
          width="20"
        >
          <use
            xlink:href="#ec-rounded-notification"
          />
        </svg>
      </div>
    </div>
    <div
      class="ec-radio-btn__text-wrapper"
      data-test="ec-radio-btn__text-wrapper"
    >
      <label
        class="ec-radio-btn__label"
        data-test="ec-radio-btn__label"
        for="ec-radio-btn-1"
        id="ec-radio-btn-1-label"
      >
        
        Label message coming from slot
        
      </label>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcRadioBtn > slots > label > should render the label slot if passed 1`] = `
<div
  class="ec-radio-btn"
  data-test="ec-radio-btn"
>
  <input
    aria-describedby="ec-radio-btn-1-error ec-radio-btn-1-label ec-radio-btn-1-description"
    class="ec-radio-btn__input"
    data-test="ec-radio-btn__input"
    id="ec-radio-btn-1"
    type="radio"
  />
  <div
    class="ec-radio-btn__wrapper"
  >
    <div
      class="ec-radio-btn__icon-wrapper"
      data-test="ec-radio-btn__icon-wrapper"
    >
      <div
        class="ec-radio-btn__icon-wrapper-inner"
      >
        <svg
          class="ec-icon ec-radio-btn__icon"
          height="20"
          width="20"
        >
          <use
            xlink:href="#ec-rounded-notification"
          />
        </svg>
      </div>
    </div>
    <div
      class="ec-radio-btn__text-wrapper"
      data-test="ec-radio-btn__text-wrapper"
    >
      <label
        class="ec-radio-btn__label"
        data-test="ec-radio-btn__label"
        for="ec-radio-btn-1"
        id="ec-radio-btn-1-label"
      >
        
        Test label message slot
        
      </label>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>
`;
